Added number of questions

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,4 +43,8 @@
       <% end %>
     </div>
   </div>
+  <div class="questions-number">
+    Всего <%= @questions.count %> <%= declension(@questions.count, 'вопрос', 'вопроса', 'вопросов') %>
+  </div>
 </div>
+
