--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="questions-number">
-    Всего <%= @questions.count %> <%= declension(@questions.count, 'вопрос', 'вопроса', 'вопросов') %>
+    Всего <%= "#{@questions.count} #{declension(@questions.count, 'вопрос', 'вопроса', 'вопросов')}" %>
   </div>
 </div>
 
