--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,12 @@
 
     <div class="content">
       <div class="container">
+        if flash.any?
+          <div class="content-wrapper buffer-both">
+            <% flash.each do |name, message| %>
+              <%= content_tag :div, message, class: "flash-#{name}" %>
+          </div>  
+        end
         <%= yield %>
       </div>
     </div>
