--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
   <h1 class="title-medium">
     <%= @user.name %>
   </h1>
-
+  <div class="buffer-both">
+    <%= link_to 'Редактировать профиль', edit_user_path(@user)
+  </div>  
   <div class="user-image-div">
     <%= image_tag user_avatar(@user), class: 'user-image', alt: '[Фото]' %>
   </div>
