--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -41,6 +41,7 @@
         <div class="form-action">
           <%= f.submit 'Сохранить', class: 'button button-small button-dark' %>
         </div>
+      <% end %>  
     </div>
   </div>
 </div>
