--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -37,6 +37,7 @@
         <div class="form-action">
           <%= f.submit 'Зарегистрироваться', class: 'button button-small button-dark' %>
         </div>
+      <% end %>
     </div>
   </div>
 </div>
