--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form">
   <%= form_for @question do |f| %>
-    <% if @user.errors.any? %>
+    <% if @question.errors.any? %>
       <div class="form-errors">
         <ul>
           <% @question.errors.full_messages.each do |messsage| %>
