--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,11 @@
     @<%= @user.username %>
   </h2>
 
+  <div class="buffer-both">
+    <%= link_to 'Удалить аккаунт', user_path(@user), method: :delete,
+          data: {confirm: 'Вы уверены?'} if current_user == @user %>
+  </div>
+  
   <div class="user-ask-button container text-center">
     <%= link_to "Спроси меня", '', class: 'button button-light', id: 'ask-button' %>
   </div>
