--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,9 +17,25 @@
     <%= link_to 'Удалить аккаунт', user_path(@user), method: :delete,
           data: {confirm: 'Вы уверены?'} if current_user == @user %>
   </div>
-  
+</div>
+
+<div class="user-details">
   <div class="user-ask-button container text-center">
-    <%= link_to "Спроси меня", '', class: 'button button-light', id: 'ask-button' %>
+    <%= link_to 'Спроси меня', '', class: 'button button-light', id: 'ask-button' %>
+  </div>
+  <div class="user-statistics container text-center">
+    <div class="column-1-3">
+      <h1 class = "title-small"><%= @questions_count %></h1>
+      <p><%= declension(@questions_count, 'вопрос', 'вопроса', 'вопросов') %></p>
+    </div>
+    <div class="column-1-3">
+      <h1 class = "title-small"><%= @answers_count %></h1>
+      <p><%= declension(@answers_count, 'ответ', 'ответа', 'ответов') %></p>
+    </div>
+    <div class="column-1-3">
+      <h1 class = "title-small"><%= @unanswered_count %></h1>
+      <p><%= declension(@unanswered_count, 'вопрос', 'вопроса', 'вопросов') %> без ответа</p>
+    </div>
   </div>
 </div>
 
@@ -28,12 +44,10 @@
     <div class="form">
       <%= form_for @new_question do |f| %>
         <%= f.hidden_field :user_id %>
-
         <div class="form-field">
           <%= f.label "Ваш вопрос для @#{@user.username}", class: 'form-label' %>
           <%= f.text_area :text, class: 'form-textarea' %>
         </div>
-
         <div class="form-action">
           <%= submit_tag 'Задать вопрос', class: 'button button-small button-dark' %>
         </div>
