--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <meta>
+  <head>
     <meta charset="UTF-8"/>
     <title>Хорошие вопросы</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
-
   <body>
     <div class="header">
       <div class="container">
@@ -26,7 +24,6 @@
             <%= link_to 'Войти', log_in_path, class: 'button button-light button-small' %>    
           <% end %>
         </div>
-
       </div>
     </div>
 
