--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,6 +1,3 @@
-<% question ||= nil %>
-<% action_icon = question.answer.blank? ? 'reply' : 'pencil' %>
-
 <div class="question">
   <div class="question-content">
     <div class="question-text text-lead">
@@ -19,9 +16,11 @@
   </div>
 
   <% if question.user == current_user %>
+    <% edit_icon = question.answer.blank? ? 'reply' : 'edit' %>
+
     <div class="question-actions">
-      <%= link_to fa_icon(action_icon), edit_question_path(question) %>
-      <%= link_to fa_icon('trash-0'), question_path(question), method: :delete,
+      <%= link_to fa_icon(edit_icon), edit_question_path(question) %>
+      <%= link_to fa_icon('trash'), question_path(question), method: :delete,
                   data: {confirm: 'Точно удалить вопрос?'} %>
     </div>
   <% end %>  
