--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,8 +20,13 @@
         </div>
 
         <div class="form-field">
-          <%= f.label :username, 'Имя', class: 'form-label' %>
+          <%= f.label :username, 'Никнейм', class: 'form-label' %>
           <%= f.text_field :username, class: 'form-text-field' %>
+        </div>
+
+        <div class="form-field">
+          <%= f.label :name, 'Имя', class: 'form-label' %>
+          <%= f.text_field :name, class: 'form-text-field' %>
         </div>
 
         <div class="form-field">
