Author of question added

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,7 +3,7 @@
     <% if @question.errors.any? %>
       <div class="form-errors">
         <ul>
-          <% @question.errors.full_messages.each do |messsage| %>
+          <% @question.errors.full_messages.each do |message| %>
             <li class="form-error-message"><%= message %></li>
           <% end %>
         </ul>
