--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -4,17 +4,23 @@
        <%= question.text %>
     </div>
 
+    <% if question.author.present? %>
+      <div class="question-author">
+        <%= link_to "@#{question.author.username}", user_path(question.author) %>
+      </div>
+    <% end %>       
+    
+    <div class="question-date">
+      <%= l(question.created_at, format: :short) %>
+    </div>
+    
     <% if question.answer.present? %>
       <div class="question-answer text-lead">
         <%= question.answer if question.answer.present? %>
       </div>
     <% end %>
-
-    <div class="question-date">
-      <%= l(question.created_at, format: :short) %>
-    </div>
-  </div>
-
+  </div>  
+  
   <% if question.user == current_user %>
     <% edit_icon = question.answer.blank? ? 'reply' : 'edit' %>
 
