--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -15,7 +15,7 @@
     </div>
     
     <% if question.answer.present? %>
-      <div class="question-answer text-lead">
+      <div class="question-answer text-lead buffer-both">
         <%= question.answer if question.answer.present? %>
       </div>
     <% end %>
