validation and form field of header color

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -45,7 +45,7 @@
 
         <div class="form-field">
           <%= f.label :header_color, 'Цвет фона', class: 'form-label' %>
-          <%= color_field('user', "header_color", class: 'form-text-field form-color-field') %>
+          <%= f.color_field :header_color, class: 'form-text-field form-color-field' %>
         </div>
         
         <div class="form-action">
