--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -28,6 +28,11 @@
           <%= f.label :name, 'Имя', class: 'form-label' %>
           <%= f.text_field :name, class: 'form-text-field' %>
         </div>
+
+        <div class="form-field">
+          <%= f.label :avatar_url, 'Url аватара', class: 'form-label' %>
+          <%= f.text_field :avatar_url, class: 'form-text-field' %>
+        </div>
         
         <div class="buffer-top-large buffer-bottom">
           Если не хотите менять пароль, оставьте эти поля пустыми!
