header-color validation

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,6 +30,11 @@
         </div>
 
         <div class="form-field">
+          <%= f.label :avatar_url, 'Url аватара', class: 'form-label' %>
+          <%= f.text_field :avatar_url, class: 'form-text-field' %>
+        </div>
+
+        <div class="form-field">
           <%= f.label :password, 'Пароль', class: 'form-label' %>
           <%= f.password_field :password, class: 'form-text-field' %>
         </div>
