--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -24,7 +24,7 @@
       </div>
     <% end %>
 
-    <!--<%= recaptcha_tags unless current_user.present? %>-->
+    <%= recaptcha_tags unless current_user.present? %>
 
     <div class="form-action">
       <%= f.submit 'Сохранить', class: 'button button-small button-dark' %>
