--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,26 +1,26 @@
-<div class="question">
+<div class="question" id="question-<%= question.id %>">
   <div class="question-content">
     <div class="question-text text-lead">
-       <%= question.text %>
+       <%= add_hashtag_link(question.text) %>
     </div>
 
     <% if question.author.present? %>
       <div class="question-author">
         <%= link_to "@#{question.author.username}", user_path(question.author) %>
       </div>
-    <% end %>       
-    
+    <% end %>
+
     <div class="question-date">
       <%= l(question.created_at, format: :short) %>
     </div>
-    
+
     <% if question.answer.present? %>
       <div class="question-answer text-lead buffer-both">
-        <%= question.answer if question.answer.present? %>
+        <%= add_hashtag_link(question.answer) if question.answer.present? %>
       </div>
     <% end %>
-  </div>  
-  
+  </div>
+
   <% if question.user == current_user %>
     <% edit_icon = question.answer.blank? ? 'reply' : 'edit' %>
 
@@ -29,5 +29,5 @@
       <%= link_to fa_icon('trash'), question_path(question), method: :delete,
                   data: {confirm: 'Точно удалить вопрос?'} %>
     </div>
-  <% end %>  
+  <% end %>
 </div>
